--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Yi-Hsiu",
   "license": "ISC",
   "devDependencies": {
+    "@vite-pwa/vitepress": "^0.5.0",
     "vitepress": "^1.1.4"
   }
 }
