--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
   "name": "hsiu-site",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vitepress dev blog",
-    "build": "vitepress build blog",
-    "preview": "vitepress preview blog"
+    "dev": "astro dev --root ./blog --host",
+		"build": "astro build --root ./blog",
+		"preview": "astro preview --root ./blog",
+		"astro": "astro --root ./blog"
   },
   "author": "Yi-Hsiu",
   "license": "ISC",
-  "devDependencies": {
-    "@vite-pwa/vitepress": "^0.5.0",
-    "vitepress": "^1.1.4"
-  }
+  "dependencies": {
+		"@astrojs/mdx": "^4.0.3",
+		"@astrojs/rss": "^4.0.10",
+		"@astrojs/sitemap": "^3.2.1",
+		"astro": "^5.1.1"
+	}
 }
